[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "LeetCode solutions implemented in Rust"
license = "MIT"

[dependencies]
rand = "0.8"

[dev-dependencies]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
